samples/_failures_safe/1761622375_2852c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50248f9c.c: In function ‘main’:
./samples/SAFE/__tmp_50248f9c.c:204:5: error: expected identifier or ‘(’ at end of input
  204 |     Token
      |     ^~~~~
./samples/SAFE/__tmp_50248f9c.c:204:5: error: expected declaration or statement at end of input
